--- a/public/contact.html
+++ b/public/contact.html
@@ -44,219 +44,7 @@
       </header>
 
       <!-- main -->
-      <main class="main">
-        <figure class="figure">
-          <!-- 배경이미지 -->
-          <div class="background"></div>
-          <!-- logo -->
-          <h1>
-            <strong>HJ</strong><br />
-            <span>MULTI-MEDIA & DEVELOPMENT</span>
-          </h1>
-          <!-- player section-->
-          <section class="section">
-            <article class="on">
-              <!-- 앨범 이미지 -->
-              <div class="inner">
-                <div class="pic">
-                  <div class="dot"></div>
-                </div>
-                <div class="txt">
-                  <h2>Blizzards</h2>
-                  <p>Lorem, ipsum dolor sit amet consectetur adipisicing.</p>
-
-                  <!-- 하단바 -->
-                  <ul>
-                    <li class="pause"><i class="fa-solid fa-pause"></i></li>
-                    <li class="play"><i class="fa-solid fa-play"></i></li>
-                    <li class="load">
-                      <i class="fa-solid fa-rotate-right"></i>
-                    </li>
-                  </ul>
-
-                  <audio src="music/Blizzards.mp3"></audio>
-                </div>
-              </div>
-            </article>
-
-            <article>
-              <!-- 앨범 이미지 -->
-              <div class="inner">
-                <div class="pic">
-                  <div class="dot"></div>
-                </div>
-                <div class="txt">
-                  <h2>Calm</h2>
-                  <p>Lorem, ipsum dolor sit amet consectetur adipisicing.</p>
-
-                  <!-- 하단바 -->
-                  <ul>
-                    <li class="pause"><i class="fa-solid fa-pause"></i></li>
-                    <li class="play"><i class="fa-solid fa-play"></i></li>
-                    <li class="load">
-                      <i class="fa-solid fa-rotate-right"></i>
-                    </li>
-                  </ul>
-
-                  <audio src="music/Calm.mp3"></audio>
-                </div>
-              </div>
-            </article>
-
-            <article>
-              <!-- 앨범 이미지 -->
-              <div class="inner">
-                <div class="pic">
-                  <div class="dot"></div>
-                </div>
-                <div class="txt">
-                  <h2>Dusty_Road</h2>
-                  <p>Lorem, ipsum dolor sit amet consectetur adipisicing.</p>
-
-                  <!-- 하단바 -->
-                  <ul>
-                    <li class="pause"><i class="fa-solid fa-pause"></i></li>
-                    <li class="play"><i class="fa-solid fa-play"></i></li>
-                    <li class="load">
-                      <i class="fa-solid fa-rotate-right"></i>
-                    </li>
-                  </ul>
-
-                  <audio src="music/Dusty_Road.mp3"></audio>
-                </div>
-              </div>
-            </article>
-
-            <article>
-              <!-- 앨범 이미지 -->
-              <div class="inner">
-                <div class="pic">
-                  <div class="dot"></div>
-                </div>
-                <div class="txt">
-                  <h2>Escape</h2>
-                  <p>Lorem, ipsum dolor sit amet consectetur adipisicing.</p>
-
-                  <!-- 하단바 -->
-                  <ul>
-                    <li class="pause"><i class="fa-solid fa-pause"></i></li>
-                    <li class="play"><i class="fa-solid fa-play"></i></li>
-                    <li class="load">
-                      <i class="fa-solid fa-rotate-right"></i>
-                    </li>
-                  </ul>
-
-                  <audio src="music/Escape.mp3"></audio>
-                </div>
-              </div>
-            </article>
-
-            <article>
-              <!-- 앨범 이미지 -->
-              <div class="inner">
-                <div class="pic">
-                  <div class="dot"></div>
-                </div>
-                <div class="txt">
-                  <h2>Payday</h2>
-                  <p>Lorem, ipsum dolor sit amet consectetur adipisicing.</p>
-
-                  <!-- 하단바 -->
-                  <ul>
-                    <li class="pause"><i class="fa-solid fa-pause"></i></li>
-                    <li class="play"><i class="fa-solid fa-play"></i></li>
-                    <li class="load">
-                      <i class="fa-solid fa-rotate-right"></i>
-                    </li>
-                  </ul>
-
-                  <audio src="music/Payday.mp3"></audio>
-                </div>
-              </div>
-            </article>
-
-            <article>
-              <!-- 앨범 이미지 -->
-              <div class="inner">
-                <div class="pic">
-                  <div class="dot"></div>
-                </div>
-                <div class="txt">
-                  <h2>Retreat</h2>
-                  <p>Lorem, ipsum dolor sit amet consectetur adipisicing.</p>
-
-                  <!-- 하단바 -->
-                  <ul>
-                    <li class="pause"><i class="fa-solid fa-pause"></i></li>
-                    <li class="play"><i class="fa-solid fa-play"></i></li>
-                    <li class="load">
-                      <i class="fa-solid fa-rotate-right"></i>
-                    </li>
-                  </ul>
-
-                  <audio src="music/Retreat.mp3"></audio>
-                </div>
-              </div>
-            </article>
-
-            <article>
-              <!-- 앨범 이미지 -->
-              <div class="inner">
-                <div class="pic">
-                  <div class="dot"></div>
-                </div>
-                <div class="txt">
-                  <h2>Seasonal</h2>
-                  <p>Lorem, ipsum dolor sit amet consectetur adipisicing.</p>
-
-                  <!-- 하단바 -->
-                  <ul>
-                    <li class="pause"><i class="fa-solid fa-pause"></i></li>
-                    <li class="play"><i class="fa-solid fa-play"></i></li>
-                    <li class="load">
-                      <i class="fa-solid fa-rotate-right"></i>
-                    </li>
-                  </ul>
-
-                  <audio src="music/Seasonal.mp3"></audio>
-                </div>
-              </div>
-            </article>
-
-            <article>
-              <!-- 앨범 이미지 -->
-              <div class="inner">
-                <div class="pic">
-                  <div class="dot"></div>
-                </div>
-                <div class="txt">
-                  <h2>Vespers</h2>
-                  <p>Lorem, ipsum dolor sit amet consectetur adipisicing.</p>
-
-                  <!-- 하단바 -->
-                  <ul>
-                    <li class="pause"><i class="fa-solid fa-pause"></i></li>
-                    <li class="play"><i class="fa-solid fa-play"></i></li>
-                    <li class="load">
-                      <i class="fa-solid fa-rotate-right"></i>
-                    </li>
-                  </ul>
-
-                  <audio src="music/Vespers.mp3"></audio>
-                </div>
-              </div>
-            </article>
-          </section>
-
-          <!-- skip buttons 가상 클래스로 선 그릴 것 -->
-          <div class="prevBtn">
-            <span>PREV MUSIC</span>
-          </div>
-          <div class="nextBtn">
-            <span>NEXT MUSIC</span>
-          </div>
-        </figure>
-      </main>
+      <main class="main"></main>
 
       <!-- footer -->
       <footer class="footer">
