section 아래 article json연동

--- a/public/work.html
+++ b/public/work.html
@@ -61,91 +61,7 @@
           <a href="#top"><i class="fa-solid fa-circle-chevron-up"></i></a>
         </div>
         <section class="section">
-          <!-- 각 아티클에 data-video 속성을 추가하여 모달에 표시할 비디오 경로 지정 -->
-          <article class="video" data-video="videos/video1.mp4">
-            <div>
-              <img src="imgs/video1.jpg" alt="비디오이미지1" />
-              <h2>Lorem, ipsum dolor.</h2>
-              <p>Lorem ipsum dolor sit amet consectetur.</p>
-            </div>
-          </article>
-          <article class="motion" data-video="videos/motion1.mp4">
-            <div>
-              <img src="imgs/motion1.jpg" alt="모션이미지1" />
-              <h2>Lorem, ipsum dolor.</h2>
-              <p>Lorem ipsum dolor sit amet consectetur.</p>
-            </div>
-          </article>
-          <article class="video" data-video="videos/video2.mp4">
-            <div>
-              <img src="imgs/video2.jpg" alt="비디오이미지2" />
-              <h2>Lorem, ipsum dolor.</h2>
-              <p>Lorem ipsum dolor sit amet consectetur.</p>
-            </div>
-          </article>
-          <article class="motion" data-video="videos/motion2.mp4">
-            <div>
-              <img src="imgs/motion2.jpg" alt="모션이미지2" />
-              <h2>Lorem, ipsum dolor.</h2>
-              <p>Lorem ipsum dolor sit amet consectetur.</p>
-            </div>
-          </article>
-          <article class="video" data-video="videos/video3.mp4">
-            <div>
-              <img src="imgs/video3.jpg" alt="비디오이미지3" />
-              <h2>Lorem, ipsum dolor.</h2>
-              <p>Lorem ipsum dolor sit amet consectetur.</p>
-            </div>
-          </article>
-          <article class="motion" data-video="videos/motion3.mp4">
-            <div>
-              <img src="imgs/motion3.jpg" alt="모션이미지3" />
-              <h2>Lorem, ipsum dolor.</h2>
-              <p>Lorem ipsum dolor sit amet consectetur.</p>
-            </div>
-          </article>
-          <article class="video" data-video="videos/video4.mp4">
-            <div>
-              <img src="imgs/video4.jpg" alt="비디오이미지4" />
-              <h2>Lorem, ipsum dolor.</h2>
-              <p>Lorem ipsum dolor sit amet consectetur.</p>
-            </div>
-          </article>
-          <article class="motion" data-video="videos/motion4.mp4">
-            <div>
-              <img src="imgs/motion4.jpg" alt="모션이미지4" />
-              <h2>Lorem, ipsum dolor.</h2>
-              <p>Lorem ipsum dolor sit amet consectetur.</p>
-            </div>
-          </article>
-          <article class="video" data-video="videos/video5.mp4">
-            <div>
-              <img src="imgs/video5.jpg" alt="비디오이미지5" />
-              <h2>Lorem, ipsum dolor.</h2>
-              <p>Lorem ipsum dolor sit amet consectetur.</p>
-            </div>
-          </article>
-          <article class="motion" data-video="videos/motion1.mp4">
-            <div>
-              <img src="imgs/motion5.jpg" alt="모션이미지5" />
-              <h2>Lorem, ipsum dolor.</h2>
-              <p>Lorem ipsum dolor sit amet consectetur.</p>
-            </div>
-          </article>
-          <article class="video" data-video="videos/video6.mp4">
-            <div>
-              <img src="imgs/video6.jpg" alt="비디오이미지6" />
-              <h2>Lorem, ipsum dolor.</h2>
-              <p>Lorem ipsum dolor sit amet consectetur.</p>
-            </div>
-          </article>
-          <article class="motion" data-video="videos/motion1.mp4">
-            <div>
-              <img src="imgs/motion6.jpg" alt="모션이미지6" />
-              <h2>Lorem, ipsum dolor.</h2>
-              <p>Lorem ipsum dolor sit amet consectetur.</p>
-            </div>
-          </article>
+          <!-- json 연동 -->
         </section>
         <!-- 모달 영역 -->
         <div id="video-modal" class="modal">
