work 아티클&모달 json, 미디어 쿼리 수정

--- a/public/work.html
+++ b/public/work.html
@@ -61,20 +61,15 @@
           <a href="#top"><i class="fa-solid fa-circle-chevron-up"></i></a>
         </div>
         <section class="section">
-          <!-- json 연동 -->
+          <!-- article json 연동 -->
         </section>
         <!-- 모달 영역 -->
         <div id="video-modal" class="modal">
           <div class="modal-content">
             <span class="close">&times;</span>
             <video id="modal-video" controls></video>
-            <h2>Lorem, ipsum dolor.</h2>
-            <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos
-              eius totam nesciunt ducimus laborum sed ex fuga omnis vel
-              recusandae nisi molestiae sequi accusamus, fugit, eligendi
-              accusantium eum laboriosam facere?
-            </p>
+            <h2></h2>
+            <p></p>
           </div>
         </div>
       </main>
