--- a/public/contact.html
+++ b/public/contact.html
@@ -43,13 +43,67 @@
       </header>
 
       <!-- main -->
-      <main class="main"></main>
+      <main class="main">
+        <!-- 프로필 좌측 픽스, 우측 섹션영역 스크롤 -->
+        <div class="profile">
+          <img src="./imgs/profile.jpg" alt="프로필 이미지" />
+        </div>
+        <section>
+          <article>
+            <h2></h2>
+            <span></span>
+            <div class="tools">
+              <!-- <ul> -->
+                <li>
+                  <img
+                    src="./imgs/free-icon-premiere-pro-5968525.png"
+                    alt="프리미어프로"
+                  />
+                </li>
+                <li>
+                  <img
+                    src="./imgs/free-icon-after-effects-5968428.png"
+                    alt="에프터이펙트"
+                  />
+                </li>
+                <li><img src="./imgs/free-icon-html-5.png" alt="html" /></li>
+                <li><img src="./imgs/free-icon-css-3.png" alt="css" /></li>
+                <li><img src="./imgs/free-icon-js.png" alt="js" /></li>
+              </ul>
+            </div>
+            <div class="contact-me">
+              <ul>
+                <li>
+                  <i class="fa-solid fa-square-phone"></i>
+                  <span>010.2025.7402</span>
+                </li>
+                <li>
+                  <a href=""
+                    ><i class="fa-solid fa-square-envelope"></i
+                    ><span>morninglightp@naver.com</span></a
+                  >
+                </li>
+              </ul>
+            </div>
+          </article>
+        </section>
+      </main>
 
       <!-- footer -->
       <footer class="footer">
-        <div>
-          <div class="overlay">
-            <p class="copyright">ⓒ 2024. HJ. ALL RIGHTS RESERVED.</p>
+        <div class="overlay">
+          <p class="copyright">ⓒ 2024. HJ. ALL RIGHTS RESERVED.</p>
+          <div class="credit">
+            Creadit:
+            <a
+              href="https://www.flaticon.com/kr/free-icons/-"
+              title="후 효과 아이콘"
+              >Freepik - Flaticon</a
+            >
+            <a
+              href="https://pngtree.com/freepng/camera-screen-rec-png_8165015.html"
+              >png image from pngtree.com</a
+            >
           </div>
         </div>
       </footer>
