--- a/public/work.html
+++ b/public/work.html
@@ -61,9 +61,9 @@
           <a href="#top"><i class="fa-solid fa-circle-chevron-up"></i></a>
         </div>
         <section class="section">
-          <!-- article json 연동 -->
+          <!-- article json -->
         </section>
-        <!-- 모달 영역 -->
+        <!-- modal json -->
         <div id="video-modal" class="modal">
           <div class="modal-content">
             <span class="close">&times;</span>
