contact 화면에 따른 크기조정, 구조 변경

--- a/public/contact.html
+++ b/public/contact.html
@@ -48,114 +48,75 @@
           <img src="./imgs/profile.jpg" alt="프로필 이미지" />
         </div>
         <div class="content">
-          <section class="about-me">
+          <section >
             <article>
+              <div class="about-me">
               <h1>About Me</h1>
               <p>
-                안녕하세요! 저는 비디오 및 모션 그래픽 디자이너로 성장하고 있는
-                박희조입니다.<br />
-                영상 제작 기술을 배우며 저만의 포트폴리오 페이지를 만들기 위해
-                웹 코딩을 배워 지금의 페이지를 만들게 됐습니다.저는 평소 드라마,
-                영화 또는 소설 등과 같은 이야기들에 빠져들었고 제가 구상한
-                스토리를 영상 목적에 맞게 시각적으로 표현하여 보는 사람이 쉽게
-                이해하고 빠져들게 하기 위해 영상 제작 기술을 학습하고 있고
-                창작물을 만들어가고 있습니다. 저만의 만족이 아닌 영상 자체의
-                목적에 맞으며 보는 사람에게 영감과 여운을 줄 수 있는 영상
-                제작자가 되고 싶습니다. 제 작업에 관심이 있으시다면 언제든지
-                연락 주시길 바랍니다!
+                안녕하세요 ! <br/>저는 비디오 및 모션 그래픽 디자이너로 성장하고 있는
+                박희조입니다.<br /><br />
+                저는 제가 구상한 스토리를 시각적으로 표현하여 보는 사람이
+                이해하기 쉽고 빠져드는 영상의 제작을 목표로 영상 제작 기술을 학습하고
+                창작물을 만들어가고 있습니다. <br /><br />저만의 만족이 아닌
+                영상 자체의 목적에 맞으며 보는 사람에게 영감과 여운을 줄 수 있는
+                영상 제작자가 되고 싶습니다. <br /><br />제 작업에 관심이
+                있으시다면 언제든지 연락 주시길 바랍니다 !
               </p>
-              <h2>Used Tools</h2>
-              <ul>
-                <li>
-                  <img
+              </div>
+              <div class="contact-me">
+                <h1>Contact Me</h1>
+                <ul class="contact-list">
+                  <li>
+                    <i class="fa-solid fa-square-phone"></i>
+                    <span>010 2025 7402</span>
+                  </li>
+                  <li>
+                    <i class="fa-solid fa-square-envelope"></i>
+                    <span>morninglightp@naver.com</span>
+                  </li>
+                </ul>
+                <h2>Used Tools</h2>
+                <ul>
+                  <li>
+                    <img
                     src="./imgs/free-icon-after-effects-5968428.png"
                     alt="에프터이펙트"
-                  />
-                </li>
-                <li>
-                  <img
+                    />
+                  </li>
+                  <li>
+                    <img
                     src="./imgs/free-icon-premiere-pro-5968525.png"
                     alt="프리미어프로"
-                  />
-                </li>
-                <li>
-                  <img src="./imgs/free-icon-photoshop-5968520.png" alt="js" />
-                </li>
-                <li><img src="./imgs/free-icon-html-5.png" alt="html" /></li>
-                <li><img src="./imgs/free-icon-css-3.png" alt="css" /></li>
-                <li><img src="./imgs/free-icon-js.png" alt="js" /></li>
-              </ul>
+                    />
+                  </li>
+                  <li>
+                    <img src="./imgs/free-icon-photoshop-5968520.png" alt="js" />
+                  </li>
+                  <li><img src="./imgs/free-icon-html-5.png" alt="html" /></li>
+                  <li><img src="./imgs/free-icon-css-3.png" alt="css" /></li>
+                  <li><img src="./imgs/free-icon-js.png" alt="js" /></li>
+                </ul>
+              </div>
             </article>
           </section>
-          <section class="contact-me">
-            <article>
-              <h1>Contact Me</h1>
-              <p>내용</p>
-            </article>
-          </section>
-        </div>
-      </main>
-
-      <!-- <main class="main">
-        <div class="profile">
-          <img src="./imgs/profile.jpg" alt="프로필 이미지" />
-        </div>
-        <section>
-          <article>
-            <h2></h2>
-            <span></span>
-            <div class="tools">
-              <ul>
-                <li>
-                  <img
-                    src="./imgs/free-icon-premiere-pro-5968525.png"
-                    alt="프리미어프로"
-                  />
-                </li>
-                <li>
-                  <img
-                    src="./imgs/free-icon-after-effects-5968428.png"
-                    alt="에프터이펙트"
-                  />
-                </li>
-                <li><img src="./imgs/free-icon-html-5.png" alt="html" /></li>
-                <li><img src="./imgs/free-icon-css-3.png" alt="css" /></li>
-                <li><img src="./imgs/free-icon-js.png" alt="js" /></li>
-              </ul>
-            </div>
-            <div class="contact-me">
-              <ul>
-                <li>
-                  <i class="fa-solid fa-square-phone"></i>
-                  <span>010.2025.7402</span>
-                </li>
-                <li>
-                  <a href=""
-                    ><i class="fa-solid fa-square-envelope"></i
-                    ><span>morninglightp@naver.com</span></a
-                  >
-                </li>
-              </ul>
-            </div>
-          </article>
-        </section>
-      </main> -->
+        </main>
 
       <!-- footer -->
       <footer class="footer">
         <div class="overlay">
-          <p class="copyright">ⓒ 2024. HJ. ALL RIGHTS RESERVED.</p>
-          <div class="credit">
-            Creadit:
-            <a
-              href="https://www.flaticon.com/kr/free-icons/-"
-              title="후 효과 아이콘"
-              >Freepik - Flaticon</a
-            >
-            <a
-              href="https://pngtree.com/freepng/camera-screen-rec-png_8165015.html"
-              >png image from pngtree.com</a
-            >
+          <div class="copyright">ⓒ 2024. HJ. ALL RIGHTS RESERVED.
+            <div class="credit">
+              Creadit
+              <a
+                href="https://www.flaticon.com/kr/free-icons/-"
+                title="후 효과 아이콘"
+                >Freepik - Flaticon</a
+              >
+              <a
+                href="https://pngtree.com/freepng/camera-screen-rec-png_8165015.html"
+                >png image from pngtree.com</a
+              >
+            </div>
           </div>
         </div>
       </footer>
