--- a/public/contact.html
+++ b/public/contact.html
@@ -75,7 +75,9 @@
                     <span>morninglightp@naver.com</span>
                   </li>
                 </ul>
-                <h2>Used Tools</h2>
+              </div>
+              <div class="used-tools">
+                <h1>Used Tools</h1>
                 <ul>
                   <li>
                     <img
