--- a/public/work.html
+++ b/public/work.html
@@ -7,6 +7,7 @@
     <!-- js -->
     <script src="js/isotope.pkgd.min.js"></script>
     <script src="js/work.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/5.0.0/imagesloaded.pkgd.min.js"></script>
     <!-- icon : fontawesome -->
     <script
       src="https://kit.fontawesome.com/11e7012e32.js"
