contact html 소개문구, css 미디어쿼리 540px일 때 요소 크기 및 배열  수정

--- a/public/contact.html
+++ b/public/contact.html
@@ -53,14 +53,15 @@
               <div class="about-me">
               <h1>About Me</h1>
               <p>
-                안녕하세요 ! <br/>저는 비디오 및 모션 그래픽 디자이너로 성장하고 있는
-                박희조입니다.<br /><br />
-                저는 제가 구상한 스토리를 시각적으로 표현하여 보는 사람이
-                이해하기 쉽고 빠져드는 영상의 제작을 목표로 영상 제작 기술을 학습하고
-                창작물을 만들어가고 있습니다. <br /><br />저만의 만족이 아닌
-                영상 자체의 목적에 맞으며 보는 사람에게 영감과 여운을 줄 수 있는
-                영상 제작자가 되고 싶습니다. <br /><br />제 작업에 관심이
-                있으시다면 언제든지 연락 주시길 바랍니다 !
+                안녕하세요! 
+                <br/>
+                비디오와 모션 그래픽 디자이너로 성장하고 있는 박희조입니다.
+                <br/><br/>
+                저는 구상한 이야기를 시각적으로 표현하여 보는 이가 쉽고 몰입감 있게 이해할 수 있는 영상을 제작하는 것을 목표로, 관련 기술을 꾸준히 학습하며 창작물을 만들어가고 있습니다.
+                <br/><br/>
+                저만의 만족에 그치지 않고, 영상의 목적에 맞게 사람들에게 영감과 여운을 줄 수 있는 작품을 만드는 디자이너가 되고 싶습니다.
+                <br/><br/>
+                제 작업에 관심이 있으시다면 언제든지 연락 부탁드립니다!
               </p>
               </div>
               <div class="contact-me">
