워크 아티클디브 반응수정, 콘택트  미디어쿼리수정

--- a/public/contact.html
+++ b/public/contact.html
@@ -107,7 +107,7 @@
       <!-- footer -->
       <footer class="footer">
         <div class="overlay">
-          <div class="copyright">ⓒ 2024. HJ. ALL RIGHTS RESERVED.
+          <div class="copyright">ⓒ 2024. HJ ALL RIGHTS RESERVED.
             <div class="credit">
               Creadit
               <a
