--- a/public/work.html
+++ b/public/work.html
@@ -79,7 +79,7 @@
       <footer class="footer">
         <div>
           <div class="overlay">
-            <p class="copyright">ⓒ 2024. HJ. ALL RIGHTS RESERVED.</p>
+            <p class="copyright">ⓒ 2024. HJ ALL RIGHTS RESERVED.</p>
           </div>
         </div>
       </footer>
