--- a/public/work.html
+++ b/public/work.html
@@ -68,7 +68,7 @@
         <div id="video-modal" class="modal">
           <div class="modal-content">
             <span class="close">&times;</span>
-            <video id="modal-video" controls></video>
+            <div id="modal-video-wrapper"></div> <!-- 여기에 iframe이 동적으로 삽입됨 -->
             <h2></h2>
             <p></p>
           </div>
