영상 설명 업로드

--- a/public/contact.html
+++ b/public/contact.html
@@ -73,7 +73,7 @@
                   </li>
                   <li>
                     <i class="fa-solid fa-square-envelope"></i>
-                    <span>morninglightp@naver.com</span>
+                    <span>emelmlp97@gmail.com</span>
                   </li>
                 </ul>
               </div>
