--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,8 @@
     <div class="wrap">
       <!-- header -->
       <header class="header">
+        <!-- index.html의 <head> 안에 추가 : 사용시 삭제-->
+<meta name="robots" content="noindex, nofollow">
         <div class="header-inner">
           <h1 class="logo">
             <a href="index.html"><span>Portfolio</span></a>
@@ -53,5 +55,12 @@
         </div>
       </footer>
     </div>
+
+    <!-- 홈->워크탭 리디렉션 -->
+    <script>
+      setTimeout(() => {
+        window.location.href = 'work.html';
+      }, 100);
+    </script>     
   </body>
 </html>
