배경다시살림

--- a/public/work.html
+++ b/public/work.html
@@ -25,7 +25,7 @@
       <header class="header" id="top">
         <div class="header-inner">
           <h1 class="logo">
-            <a href="work.html"><span>Portfolio</span></a>
+            <a href="index.html"><span>Portfolio</span></a>
           </h1>
           <nav class="menu">
             <ul>
