--- a/public/contact.html
+++ b/public/contact.html
@@ -23,7 +23,7 @@
       <header class="header">
         <div class="header-inner">
           <h1 class="logo">
-            <a href="work.html"><span>Portfolio</span></a> 
+            <a href="index.html"><span>Portfolio</span></a> 
           </h1>
           <nav class="menu">
             <ul>
