--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
       <!-- header -->
       <header class="header">
         <!-- index.html의 <head> 안에 추가 : 사용시 삭제-->
-<meta name="robots" content="noindex, nofollow">
+<!-- <meta name="robots" content="noindex, nofollow"> -->
         <div class="header-inner">
           <h1 class="logo">
             <a href="index.html"><span>Portfolio</span></a>
@@ -57,10 +57,10 @@
     </div>
 
     <!-- 홈->워크탭 리디렉션 -->
-    <script>
+    <!-- <script>
       setTimeout(() => {
         window.location.href = 'work.html';
       }, 100);
-    </script>     
+    </script>      -->
   </body>
 </html>
